fixed overflow and spacing issues with menu on mobile

--- a/_sass/components/_borders.scss
+++ b/_sass/components/_borders.scss
@@ -41,3 +41,7 @@
         border:dashed 2px #41403E;
       }
     }
+
+  .borders{
+    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+  }
