--- a/_sass/layout/_menu.scss
+++ b/_sass/layout/_menu.scss
@@ -8,11 +8,14 @@
       flex-direction: row;
       list-style-type: none;
       margin: 0;
-      padding: 0;
-    }
+      z-index: _misc(z-index-mid);
+      text-transform: uppercase;
 
-    .menu > li {
-      margin: 0 1rem;
+
+      a{
+        border:0;
+      }
+
     }
 
     .menu-button-container {
@@ -65,20 +68,23 @@
       transform: rotate(-405deg);
     }
 
+    //==SMALL SCREENS--//
+
     @media (max-width: 700px) {
       .menu-button-container {
         display: flex!important;
       }
       .menu {
+        @include vendor('flex-direction', 'column');
+        @include vendor('justify-content', 'center');
+        @include vendor('align-items', 'center');
         position: absolute;
         top: 0;
-        margin-top: 180px;
+        margin-top: 200px;
         left: 0;
-        flex-direction: column;
         width: 100%;
-        justify-content: center;
-        align-items: center;
         background-color: _palette(fg-bold);
+        padding:0 2em;
       }
 
 
@@ -86,6 +92,7 @@
       #menu-toggle ~ .menu li {
 
         height: 0;
+        overflow: hidden;
         margin: 0;
         padding: 0;
         border: 0;
@@ -93,17 +100,27 @@
       }
       #menu-toggle:checked ~ .menu li {
         height: 2.5em;
-        padding: 0.5em;
+        padding:0.5em 0;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+        border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+        border-bottom:dotted 2px #41403E;
+
+
       }
       .menu > li {
         display: flex;
         justify-content: center;
         margin: 0;
-        padding: 0.5em 0;
+        padding: 0 0;
         width: 100%;
         color: _palette(fg);
+
+
       }
       .menu > li:not(:last-child) {
+      }
+
+      .menu > li:last-child {
+        padding-bottom:2em;
       }
     }
