--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -2151,6 +2151,9 @@ button {
   button.dashed.thin {
     border: dashed 2px #41403E; }
 
+.borders {
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px; }
+
 /* Tiles */
 .tiles {
   display: -moz-flex;
@@ -2838,10 +2841,10 @@ button {
   flex-direction: row;
   list-style-type: none;
   margin: 0;
-  padding: 0; }
-
-.menu > li {
-  margin: 0 1rem; }
+  z-index: 5000;
+  text-transform: uppercase; }
+  .menu a {
+    border: 0; }
 
 .menu-button-container {
   display: none !important;
@@ -2890,18 +2893,29 @@ button {
     display: flex !important; }
 
   .menu {
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
     position: absolute;
     top: 0;
-    margin-top: 180px;
+    margin-top: 200px;
     left: 0;
-    flex-direction: column;
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: #03008B; }
+    background-color: #03008B;
+    padding: 0 2em; }
 
   #menu-toggle ~ .menu li {
     height: 0;
+    overflow: hidden;
     margin: 0;
     padding: 0;
     border: 0;
@@ -2909,16 +2923,21 @@ button {
 
   #menu-toggle:checked ~ .menu li {
     height: 2.5em;
-    padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1); }
+    padding: 0.5em 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+    border-bottom: dotted 2px #41403E; }
 
   .menu > li {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 0.5em 0;
+    padding: 0 0;
     width: 100%;
-    color: #ffffff; } }
+    color: #ffffff; }
+
+  .menu > li:last-child {
+    padding-bottom: 2em; } }
 h1 {
   font-family: 'Cabin Sketch', cursive;
   font-weight: normal;
